# gitlab-docker-cpp-hello

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile.build  Dockerfile.deploy  Readme.md
Sources/: CMakeLists.txt
Sources/HelloApp/: CMakeLists.txt  main.cpp
Sources/HelloLib/: CMakeLists.txt  hellolib.h  libmain.cpp
Tests/: CMakeLists.txt
Tests/VanillaTest/: CMakeLists.txt  main.cpp
